[gd_scene load_steps=10 format=2]

[ext_resource path="res://mobScenes/Piranha.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/piranha.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109804, 0.909804, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "swim"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=7]

[node name="Piranha" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 4.71239
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 2.25 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="PathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -29.0
margin_top = -35.0
margin_right = 24.0
margin_bottom = -25.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/swim = SubResource( 6 )

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
scale = Vector2( 15, 4 )
shape = SubResource( 4 )

[node name="DamageTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 3, 2.25 )
shape = SubResource( 7 )

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_ChaseArea_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_ChaseArea_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
